--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ service.api.prefix=api
 service.api.version=v1
 service.api.error.prefix=13
 service.container=ms-cache-service
-service.api.repository=https://github.com/firozkhan18/ms-springboot-272-java-8
+service.api.repository=https://github.com/firozkhan18/microservice-redis-kafka
 service.api.path=/${service.api.name}/${service.api.prefix}/${service.api.version}
-service.url=http://www.Firoz Khan.com/
+service.url=http://www.example.com/
 service.license=Apache 2 License
 # =======================================================================
 # Microservice Server Properties
@@ -40,8 +40,8 @@ server.token.type=1
 server.token.test=true
 server.token.auth.expiry=600000
 server.token.refresh.expiry=3600000
-server.token.key=<([1234567890SecretKey!!To??Encrypt##Data@12345%6790])>
-server.secure.data.key=<([1234567890SecretKEY!!TO??Encrypt##DATA@12345%6790])>
+server.token.key=XXXXXXX
+server.secure.data.key=XXXXXXX
 # ------------------------------------------------------------------------
 # Host Details
 # ------------------------------------------------------------------------
@@ -74,7 +74,7 @@ logging.file.total-size-cap=3GB
 # =======================================================================
 # Kafka Pub / Sub Configuration (Possible Ack Values > All, 1, 0)
 # =======================================================================
-spring.application.name=ms-cache
+spring.application.name=microservice-redis-kafka
 spring.kafka.bootstrap-servers=127.0.0.1:9092
 kafka.consumer.group.1=fusionGroup1
 kafka.consumer.group.2=fusionGroup2
@@ -98,27 +98,27 @@ kafka.connect.db.host=localhost
 kafka.connect.db.port=5432
 kafka.connect.db.user=postgres
 kafka.connect.db.password=postgres
-kafka.connect.db.name=ms_cache_272
+kafka.connect.db.name=ms_cache_kafka
 kafka.connect.db.server.name=ms_cache
 kafka.connect.table.include.list=ms_schema.products_m
 kafka.connect.topic.replica=1
 kafka.connect.topic.partition=1
-kafka.connect.topic.prefix=ms_cache_272
-kafka.connect.slot.name=ms_272_slot
+kafka.connect.topic.prefix=ms_cache_kafka
+kafka.connect.slot.name=ms_cache_kafka_slot
 # =======================================================================
 # Kafka Streams Configuration
 # =======================================================================
 spring.kafka.streams.auto-startup=true
 kafka.streams.topic.1.create=true
-kafka.streams.topic.1=ms_cache_272.ms_schema.products_m
+kafka.streams.topic.1=ms_cache_kafka.ms_schema.products_m
 kafka.streams.topic.1.partitions=1
 kafka.streams.topic.1.replica=1
 kafka.streams.topic.2.create=true
-kafka.streams.topic.2=ms_cache_272.ms_schema.products_data
+kafka.streams.topic.2=ms_cache_kafka.ms_schema.products_data
 kafka.streams.topic.2.partitions=1
 kafka.streams.topic.2.replica=1
 kafka.streams.topic.3.create=true
-kafka.streams.topic.3=ms_cache_272.ms_schema.products_pro
+kafka.streams.topic.3=ms_cache_kafka.ms_schema.products_pro
 kafka.streams.topic.3.partitions=1
 kafka.streams.topic.3.replica=1
 # =======================================================================
@@ -126,7 +126,7 @@ kafka.streams.topic.3.replica=1
 # =======================================================================
 db.server=mem
 db.port=5432
-db.name=ms_cache_272
+db.name=ms_cache_kafka
 db.schema=ms_schema
 db.vendor=H2
 # To Store the Data in File
